Fix filter chip contrast

--- a/packages/dataviews/src/style.scss
+++ b/packages/dataviews/src/style.scss
@@ -759,7 +759,7 @@
 		padding: 0 $grid-unit-15;
 		height: $grid-unit-40;
 		background: $gray-100;
-		color: $gray-700;
+		color: $gray-800;
 		position: relative;
 		display: flex;
 		align-items: center;
